--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+        <header>
+            <h1>Tabela do Mono</h1>
+        </header>
     <div class="container principal">
-    <table border="1" class="tabela-principal" style= "color: #fff; text-align: center; background-color: #000;"> 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_kr1zttHIpM?si=ctfxkOTnhN7NHXqn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+    <table border="1" class="tabela-principal"> 
         <caption>Melhores Design de Personagens (em jogos)</caption>
         <thead>
             <tr>
@@ -22,19 +27,23 @@
             <tr>
                 <td>Corujalce</td>
                 <td>Outer Wilds</td>
-                <td></td>
+                <td>2019</td>
             </tr>
             <tr>
                 <td>ENA</td>
                 <td>ENA: Dream BBQ</td>
-                <td></td>
+                <td>2025</td>
             </tr>
             <tr>
                 <td>The Knight</td>
                 <td>Hollow Knight</td>
-                <td></td>
+                <td>2017</td>
             </tr>
-
+            <tr>
+                <td>Jevil</td>
+                <td>Deltarune</td>
+                <td>2018</td>
+            </tr>
     </table>
     <div>
     <img src="Mono.png" alt="" class="mini-mono">
