--- a/index.html
+++ b/index.html
@@ -12,17 +12,25 @@
             <h1>Tabela do Mono</h1>
         </header>
     <div class="container principal">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_kr1zttHIpM?si=ctfxkOTnhN7NHXqn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
+        <div class="container__video">
+        <iframe class="delta" width="560" height="315" src="https://www.youtube.com/embed/_kr1zttHIpM?si=ctfxkOTnhN7NHXqn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+    <div class="container__tabela">
     <table border="1" class="tabela-principal"> 
         <caption>Melhores Design de Personagens (em jogos)</caption>
         <thead>
             <tr>
                 <th>Nome</th>
                 <th>Jogo</th>
-                <th>Ano de Lançamento do Jogo</th>
+                <th>Ano de Lancamento do Jogo</th>
             </tr>
         </thead>
+
+        <tr>
+            <td>Jevil</td>
+            <td>Deltarune</td>
+            <td>2018</td>
+        </tr>
 
             <tr>
                 <td>Corujalce</td>
@@ -39,14 +47,16 @@
                 <td>Hollow Knight</td>
                 <td>2017</td>
             </tr>
-            <tr>
-                <td>Jevil</td>
-                <td>Deltarune</td>
-                <td>2018</td>
-            </tr>
+
     </table>
-    <div>
-    <img src="Mono.png" alt="" class="mini-mono">
+</div>
+    <div class="container__imagem">
+        <img src="knight.gif" alt="" class="knight">
+        <div class="mono">
+            <h2><span>Mo</span>no</h2>
+        <a href="https://store.steampowered.com/app/1671210" target="_blank"><img src="Mono.png" alt="" class="mini-mono"></a>
+        </div>
+        <img src="jevil.gif" alt="" class="jevil">
     </div>
 </div>
 </body>
